# dsh-sigmod15-demo

./: LICENSE  dsh-sigmod15-demo.cabal
Queries/: SIGMOD.hs
Queries/SIGMOD/: Layered.hs  Nested.hs  Order.hs  Simple.hs
utils/: mksandbox.sh
