name:                dsh-sigmod15-demo
version:             0.1.0.0
synopsis:            A set of DSH examples for the demo session at SIGMOD 2015
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Alexander Ulrich
maintainer:          alex@etc-network.de
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Queries.SIGMOD
  other-modules:       Queries.SIGMOD.Simple,
                       Queries.SIGMOD.Order,
                       Queries.SIGMOD.Layered,
                       Queries.SIGMOD.Nested
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       text >= 1.2,
                       HDBC-odbc,
                       DSH >= 0.12,
                       dsh-sql >= 0.2.0.1,
                       dsh-tpc-h >= 0.1,
                       dsh-aquery >= 0.1
                       
  -- hs-source-dirs:      
  default-language:    Haskell2010